# drama

./: .gitignore  README.md
baselines/autogpt/: README.md  run_drama.sh
baselines/deep-research/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_drama.sh
baselines/deep-research/app/api/: costTracker.js
baselines/deep-research/components/: model-select.tsx
baselines/deep-research/lib/: config.ts
baselines/deep-research/output/: cost.json  report-1744558900932.json  report-1744558965943.json  report-1744559020008.json  report-1744559248756.json  report-1744559372444.json  report-1744559380323.json  report-1744559392191.json  report-1744559397440.json
baselines/openai-research-agent/: README.md  main.py  pyproject.toml  run_drama.sh
baselines/webvoyager/: .gitignore  README.md  format_data.py  prompts.py  requirements.txt  run.py  run_drama.sh  utils.py  utils_webarena.py
drama-bench/qa/: query.json
drama-bench/qa/ground-truths/1/: code.py  data.csv
drama-bench/qa/ground-truths/10/: code.py  data.csv
drama-bench/qa/ground-truths/100/: code.py  data.csv
drama-bench/qa/ground-truths/11/: code.py  (+1 more)
drama-bench/verification/: query.json
drama-bot/: .env.example  README.md  pyproject.toml  run_drama.sh
drama-bot/src/agent/: data_analyzer.py  data_retriever.py  drama_bot.py  prompts.py  utils.py
drama-bot/src/agent/scripts/: main.py
drama-bot/src/agent/subagents/: __init__.py  data_transformer.py  utils_webbrowser.py  web_augmenter.py  web_browser.py
evaluation/: code_similarity.py  data_similarity.py  eval.py  prompts.py
(+330 files in other folders)
